--- a/Makefile.am
+++ b/Makefile.am
@@ -19,12 +19,14 @@ minerd_SOURCES	= elist.h miner.h compat.h \
 		  cpu-miner.c util.c \
 		  sha2.c scrypt.c keccak.c \
 		  heavy.c quark.c skein.c \
+		  ink.c \
 		  sha3/sph_keccak.c \
 		  sha3/sph_hefty1.c \
 		  sha3/sph_groestl.c \
 		  sha3/sph_skein.c \
 		  sha3/sph_bmw.c \
 		  sha3/sph_jh.c \
+		  sha3/sph_shavite.c \
 		  sha3/sph_blake.c
 if ARCH_x86
 minerd_SOURCES += sha2-x86.S scrypt-x86.S
