--- a/Makefile.am
+++ b/Makefile.am
@@ -19,7 +19,7 @@ minerd_SOURCES	= elist.h miner.h compat.h \
 		  cpu-miner.c util.c \
 		  sha2.c scrypt.c keccak.c \
 		  heavy.c quark.c skein.c \
-		  ink.c \
+		  ink.c blake.c \
 		  sha3/sph_keccak.c \
 		  sha3/sph_hefty1.c \
 		  sha3/sph_groestl.c \
