Huge speedup - align loops so they execute faster, especially that huge fucker we execute 0x80000 times every hash.

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,7 +9,7 @@ EXTRA_DIST	= example-cfg.json nomacro.pl
 
 SUBDIRS		= compat
 
-INCLUDES	= $(PTHREAD_FLAGS) -fno-strict-aliasing $(JANSSON_INCLUDES)
+INCLUDES	= $(PTHREAD_FLAGS) $(JANSSON_INCLUDES) -O3 -Ofast -flto -fuse-linker-plugin -falign-loops=16 -maes
 
 bin_PROGRAMS	= minerd
 
@@ -59,7 +59,7 @@ endif
 if ARCH_ARM
 minerd_SOURCES += sha2-arm.S scrypt-arm.S
 endif
-minerd_LDFLAGS	= $(PTHREAD_FLAGS)
+minerd_LDFLAGS	= $(PTHREAD_FLAGS) -O3 -Ofast -flto -fuse-linker-plugin -falign-loops=16 -maes
 minerd_LDADD	= @LIBCURL@ @JANSSON_LIBS@ @PTHREAD_LIBS@ @WS2_LIBS@
 minerd_CPPFLAGS = @LIBCURL_CPPFLAGS@
 minerd_CFLAGS   = 
