Removed all other algorithms but CryptoNight - algo switch still needs to be used for the moment, though.

--- a/Makefile.am
+++ b/Makefile.am
@@ -24,29 +24,7 @@ minerd_SOURCES	= elist.h \
 		  compat.h \
 		  cpu-miner.c \
 		  util.c \
-		  sha2.c \
-		  scrypt.c \
-		  keccak.c \
-		  heavy.c \
-		  quark.c \
-		  skein.c \
-		  ink.c \
-		  blake.c \
 		  cryptonight_common.c \
-		  x11.c \
-		  sha3/sph_keccak.c \
-		  sha3/sph_hefty1.c \
-		  sha3/sph_groestl.c \
-		  sha3/sph_skein.c \
-		  sha3/sph_bmw.c \
-		  sha3/sph_jh.c \
-		  sha3/sph_shavite.c \
-		  sha3/sph_blake.c \
-		  sha3/sph_luffa.c \
-		  sha3/sph_cubehash.c \
-		  sha3/sph_simd.c \
-		  sha3/sph_echo.c \
-		  crypto/oaes_lib.c \
 		  crypto/c_keccak.c \
 		  crypto/c_groestl.c \
 		  crypto/c_blake256.c \
@@ -54,23 +32,15 @@ minerd_SOURCES	= elist.h \
 		  crypto/c_skein.c \
 		  crypto/hash.c \
 		  crypto/aesb.c
-if ARCH_x86
-minerd_SOURCES += sha2-x86.S scrypt-x86.S aesb-x86.S
-endif
-if ARCH_x86_64
-minerd_SOURCES += sha2-x64.S scrypt-x64.S aesb-x64.S
-endif
+		  
 if USE_LOBOTOMIZED_AES
-minerd_SOURCES += cryptonight_lobotomized.c
+minerd_SOURCES += cryptonight_lobotomized.c crypto/oaes_lib.c
 AM_CFLAGS += -fno-strict-aliasing
 else
 minerd_SOURCES += cryptonight_aesni.c
 AM_CFLAGS += -maes
 endif
 
-if ARCH_ARM
-minerd_SOURCES += sha2-arm.S scrypt-arm.S
-endif
 minerd_LDFLAGS	= $(AM_LDFLAGS)
 minerd_LDADD	= @LIBCURL@ @JANSSON_LIBS@ @PTHREAD_LIBS@ @WS2_LIBS@
 minerd_CPPFLAGS = $(AM_CPPFLAGS) @LIBCURL_CPPFLAGS@
