fix last warnings

--- a/Makefile.am
+++ b/Makefile.am
@@ -74,7 +74,7 @@ endif
 minerd_LDFLAGS	= $(PTHREAD_FLAGS)
 minerd_LDADD	= @LIBCURL@ @JANSSON_LIBS@ @PTHREAD_LIBS@ @WS2_LIBS@
 minerd_CPPFLAGS = @LIBCURL_CPPFLAGS@
-minerd_CFLAGS   = -O2
+minerd_CFLAGS   = -O2 -Wno-pointer-sign
 
 if HAVE_WINDOWS
 minerd_CFLAGS += -Wl,--stack,10485760
