neoscrypt: use official blake2s

--- a/Makefile.am
+++ b/Makefile.am
@@ -36,6 +36,7 @@ minerd_SOURCES	= elist.h \
 		  x14.c \
 		  x15.c \
 		  pentablake.c \
+		  sha3/blake2s.c \
 		  sha3/sph_keccak.c \
 		  sha3/sph_hefty1.c \
 		  sha3/sph_groestl.c \
