Add support for windows (VC2013)
Fix some existing bugs :
 cryptonight hashrate log and lock when missing stratum diff

colors: enable colored output by default

and also trap signals on windows (Ctrl+C)

Current state: much slower than linux (and x64 almost twice the x86 speed)

Signed-off-by: Tanguy Pruvot <tanguy.pruvot@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-
 minerd
-minerd.exe
+*.exe
 *.o
 
 autom4te.cache
@@ -29,3 +28,12 @@ mingw32-config.cache
 */.dirstamp
 
 *.iml
+
+*.vcxproj.user
+*.opensdf
+*.sdf
+*.suo
+Release/
+Debug/
+x64/Release/
+x64/Debug/
