windows: fix build with mingw64
tested ok with curl-7.38.0 openssl 1.0.1j

was really not easy to setup, ssl config:

 CROSS_COMPILE="x86_64-w64-mingw32-" ./Configure mingw64 no-asm no-shared
 make && make install

curl config:

 extraopts=--enable-ipv6
 extraflags="-DOPENSSL_NO_ASM -D_THREAD_SAFE"
 openssl=/usr/local/ssl
 CROSS_COMPILE="x86_64-w64-mingw32-" ./configure --enable-shared=no \
 --disable-manual --without-libssh2 --disable-rtsp --disable-ldap \
 --disable-dict --disable-pop3 --disable-ftp --disable-telnet --disable-tftp \
 --disable-smtp --disable-imap --disable-ldaps --disable-gopher --with-zlib \
 --with-ssl=$openssl --with-libssl-prefix=$openssl CPPFLAGS="$extraflags" ${extraopts}

Signed-off-by: Tanguy Pruvot

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,11 +5,13 @@ else
 JANSSON_INCLUDES=
 endif
 
+ACLOCAL_AMFLAGS = -I m4
+
 EXTRA_DIST	= example-cfg.json nomacro.pl
 
 SUBDIRS		= compat
 
-INCLUDES	= $(PTHREAD_FLAGS) -fno-strict-aliasing $(JANSSON_INCLUDES)
+INCLUDES	= @PTHREAD_FLAGS@ -fno-strict-aliasing $(JANSSON_INCLUDES)
 
 bin_PROGRAMS	= minerd
 
@@ -75,10 +77,14 @@ if ARCH_ARM
 endif
 endif
 
-minerd_LDFLAGS	= $(PTHREAD_FLAGS)
+if HAVE_WINDOWS
+   minerd_SOURCES += compat/winansi.c
+endif
+
+minerd_LDFLAGS	= @LDFLAGS@
 minerd_LDADD	= @LIBCURL@ @JANSSON_LIBS@ @PTHREAD_LIBS@ @WS2_LIBS@
 minerd_CPPFLAGS = @LIBCURL_CPPFLAGS@
-minerd_CFLAGS   = -Wno-pointer-sign -O3
+minerd_CFLAGS   = -Wno-pointer-sign
 
 if HAVE_WINDOWS
 minerd_CFLAGS += -Wl,--stack,10485760
