--- a/configure.ac
+++ b/configure.ac
@@ -1,10 +1,12 @@
-AC_INIT([cpuminer], [1.0.5])
+AC_INIT([cpuminer-multi], [1.0.5])
 
 AC_PREREQ([2.59c])
 AC_CANONICAL_SYSTEM
 AC_CONFIG_SRCDIR([cpu-miner.c])
-AM_INIT_AUTOMAKE([foreign subdir-objects])
 AC_CONFIG_HEADERS([cpuminer-config.h])
+AC_CONFIG_MACRO_DIR([m4])
+
+AM_INIT_AUTOMAKE([foreign subdir-objects])
 
 dnl Make sure anyone changing configure.ac/Makefile.am has a clue
 AM_MAINTAINER_MODE
@@ -15,6 +17,7 @@ AC_PROG_GCC_TRADITIONAL
 AM_PROG_CC_C_O
 AM_PROG_AS
 AC_PROG_RANLIB
+# AC_PROG_CXX
 
 dnl Checks for header files
 AC_HEADER_STDC
@@ -38,26 +41,31 @@ AC_CHECK_DECLS([be32dec, le32dec, be32enc, le32enc], [], [],
 AC_FUNC_ALLOCA
 AC_CHECK_FUNCS([getopt_long])
 
-case $target in
+MINGW_TARGET=`$CC -dumpmachine 2>&1`
+case $MINGW_TARGET in
+  arm*-*-*)
+    have_arm=true
+    ;;
+  i*86-*-mingw*)
+    have_x86=true
+    have_win32=true
+    CFLAGS="-Icompat/pthreads $CFLAGS"
+    PTHREAD_LDFLAGS="-Lcompat/pthreads/x86"
+    WS2_LIBS="-lws2_32 -fPIC"
+    ;;
+  x86_64-*-mingw*|amd64-*-mingw*)
+    have_x86_64=true
+    have_win32=true
+    CFLAGS="-Icompat/pthreads $CFLAGS"
+    PTHREAD_LDFLAGS="-Lcompat/pthreads/x64"
+    # SHOULD BE AT END! after -lcrypto #
+    WS2_LIBS="-L/mingw/x86_64-w64-mingw32/lib -lws2_32 -fPIC"
+    ;;
   i*86-*-*)
     have_x86=true
     ;;
   x86_64-*-*|amd64-*-*)
     have_x86_64=true
-    ;;
-  arm*-*-*)
-    have_arm=true
-    ;;
-esac
-
-PTHREAD_FLAGS="-pthread"
-WS2_LIBS=""
-
-case $target in
-  *-*-mingw*)
-    have_win32=true
-    PTHREAD_FLAGS=""
-    WS2_LIBS="-lws2_32"
     ;;
 esac
 
@@ -96,13 +104,17 @@ then
 fi
 
 AC_CHECK_LIB(jansson, json_loads, request_jansson=false, request_jansson=true)
-AC_CHECK_LIB([pthread], [pthread_create], PTHREAD_LIBS="-lpthread",
-  AC_CHECK_LIB([pthreadGC2], [pthread_create], PTHREAD_LIBS="-lpthreadGC2",
-    AC_CHECK_LIB([pthreadGC1], [pthread_create], PTHREAD_LIBS="-lpthreadGC1",
-      AC_CHECK_LIB([pthreadGC], [pthread_create], PTHREAD_LIBS="-lpthreadGC"
-))))
 
-AC_CHECK_LIB([crypto], [OPENSSL_init], [], [AC_MSG_FAILURE([could not find crypto])])
+# GC2 for GNU static
+if test "x$OS" = "xWindows_NT" ; then
+   # MinGW
+   AC_CHECK_LIB([pthread], [pthread_create], PTHREAD_LIBS="-lpthreadGC2",[])
+else
+   AC_CHECK_LIB([pthread], [pthread_create], PTHREAD_LIBS="-lpthread",[])
+fi
+
+LDFLAGS="$PTHREAD_LDFLAGS $LDFLAGS"
+# PTHREAD_LIBS="$PTHREAD_LIBS"
 
 AC_MSG_CHECKING(whether __uint128_t is supported)
 AC_COMPILE_IFELSE([AC_LANG_PROGRAM([static __uint128_t i = 100;])],
@@ -112,22 +124,58 @@ AC_COMPILE_IFELSE([AC_LANG_PROGRAM([static __uint128_t i = 100;])],
       AC_MSG_RESULT(no)
 )
 
+# allow if <var> in Makefile.am
 AM_CONDITIONAL([WANT_JANSSON], [test x$request_jansson = xtrue])
 AM_CONDITIONAL([HAVE_WINDOWS], [test x$have_win32 = xtrue])
 AM_CONDITIONAL([USE_ASM], [test x$enable_assembly != xno])
 AM_CONDITIONAL([ARCH_x86], [test x$have_x86 = xtrue])
 AM_CONDITIONAL([ARCH_x86_64], [test x$have_x86_64 = xtrue])
 AM_CONDITIONAL([ARCH_ARM], [test x$have_arm = xtrue])
+AM_CONDITIONAL([MINGW], [test "x$OS" = "xWindows_NT"])
 
-if test x$request_jansson = xtrue
-then
+if test x$request_jansson = xtrue ; then
 	JANSSON_LIBS="compat/jansson/libjansson.a"
 else
 	JANSSON_LIBS=-ljansson
 fi
 
-LIBCURL_CHECK_CONFIG(, 7.15.2, ,
-  [AC_MSG_ERROR([Missing required libcurl >= 7.15.2])])
+# libcurl install path (for mingw : --with-curl=/usr/local)
+AC_ARG_WITH([curl],
+   [  --with-curl=PATH         prefix where curl is installed [default=/usr]])
+
+if test -n "$with_curl" ; then
+   LIBCURL_CFLAGS="$LIBCURL_CFLAGS -I$with_curl/include"
+   LIBCURL_LDFLAGS="-L$with_curl/lib $LIBCURL_LDFLAGS"
+   LIBCURL="-lcurl -lz"
+fi
+
+# SSL install path (for mingw : --with-crypto=/usr/local/ssl)
+AC_ARG_WITH([crypto],
+   [  --with-crypto=PATH       prefix where openssl crypto is installed [default=/usr]])
+
+if test -n "$with_crypto" ; then
+   LIBCURL_CFLAGS="$LIBCURL_CFLAGS -I$with_crypto/include"
+   LIBCURL_LDFLAGS="-L$with_crypto/lib $LIBCURL_LDFLAGS"
+   LIBCURL="$LIBCURL -lssl -lcrypto"
+fi
+
+CFLAGS="$CFLAGS $LIBCURL_CFLAGS"
+LDFLAGS="$LDFLAGS $LIBCURL_LDFLAGS"
+
+#AC_CHECK_LIB([crypto],[OPENSSL_init], crypto=yes, [AC_MSG_ERROR([OpenSSL crypto library required])])
+#AC_CHECK_LIB([ssl],[SSL_new], ssl=yes, ssl=no)
+
+# AC_CHECK_LIB([curl], [curl_multi_timeout],
+#    have_libcurl=yes,
+#    have_libcurl=no AC_MSG_ERROR([curl library required])
+# )
+
+# LIBCURL_CHECK_CONFIG([yes], 7.15, curlconfig=yes, curlconfig=no)
+
+AC_SUBST(LIBCURL)
+AC_SUBST(LIBCURL_CFLAGS)
+AC_SUBST(LIBCURL_CPPFLAGS)
+# AC_SUBST(LIBCURL_LDFLAGS)
 
 AC_SUBST(JANSSON_LIBS)
 AC_SUBST(PTHREAD_FLAGS)
