Add Qubit and Nist5 algos

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,53 +15,51 @@ bin_PROGRAMS	= minerd
 
 dist_man_MANS	= minerd.1
 
-minerd_SOURCES	= elist.h \
-		  miner.h \
-		  compat.h \
-		  cpu-miner.c \
-		  util.c \
-		  sha2.c \
-		  scrypt.c \
-		  keccak.c \
-		  heavy.c \
-		  quark.c \
-		  skein.c \
-		  ink.c \
-		  blake.c \
-		  cryptonight.c \
-		  fresh.c \
-		  neoscrypt.c \
-		  s3.c \
-		  x11.c \
-		  x13.c \
-		  x14.c \
-		  x15.c \
-		  pentablake.c \
-		  sha3/blake2s.c \
-		  sha3/sph_keccak.c \
-		  sha3/sph_hefty1.c \
-		  sha3/sph_groestl.c \
-		  sha3/sph_skein.c \
-		  sha3/sph_bmw.c \
-		  sha3/sph_jh.c \
-		  sha3/sph_shavite.c \
-		  sha3/sph_blake.c \
-		  sha3/sph_luffa.c \
-		  sha3/sph_cubehash.c \
-		  sha3/sph_simd.c \
-		  sha3/sph_echo.c \
-		  sha3/sph_hamsi.c \
-		  sha3/sph_fugue.c \
-		  sha3/sph_shabal.c \
-		  sha3/sph_whirlpool.c \
-		  crypto/oaes_lib.c \
-		  crypto/c_keccak.c \
-		  crypto/c_groestl.c \
-		  crypto/c_blake256.c \
-		  crypto/c_jh.c \
-		  crypto/c_skein.c \
-		  crypto/hash.c \
-		  crypto/aesb.c
+minerd_SOURCES = \
+  cpu-miner.c util.c \
+  sha3/sph_keccak.c \
+  sha3/sph_hefty1.c \
+  sha3/sph_groestl.c \
+  sha3/sph_skein.c \
+  sha3/sph_bmw.c \
+  sha3/sph_jh.c \
+  sha3/sph_shavite.c \
+  sha3/sph_blake.c \
+  sha3/sph_luffa.c \
+  sha3/sph_cubehash.c \
+  sha3/sph_simd.c \
+  sha3/sph_echo.c \
+  sha3/sph_hamsi.c \
+  sha3/sph_fugue.c \
+  sha3/sph_shabal.c \
+  sha3/sph_whirlpool.c \
+  crypto/blake2s \
+  crypto/oaes_lib.c \
+  crypto/c_keccak.c \
+  crypto/c_groestl.c \
+  crypto/c_blake256.c \
+  crypto/c_jh.c \
+  crypto/c_skein.c \
+  crypto/hash.c \
+  crypto/aesb.c \
+  blake.c \
+  cryptonight.c \
+  fresh.c \
+  heavy.c \
+  ink.c \
+  keccak.c \
+  pentablake.c \
+  quark.c \
+  neoscrypt.c \
+  nist5.c \
+  qubit.c \
+  scrypt.c sha2.c \
+  skein.c \
+  s3.c \
+  x11.c \
+  x13.c \
+  x14.c \
+  x15.c
 
 if USE_ASM
    minerd_SOURCES += neoscrypt_asm.S
@@ -83,7 +81,7 @@ endif
 minerd_LDFLAGS	= @LDFLAGS@
 minerd_LDADD	= @LIBCURL@ @JANSSON_LIBS@ @PTHREAD_LIBS@ @WS2_LIBS@
 minerd_CPPFLAGS = @LIBCURL_CPPFLAGS@
-minerd_CFLAGS   = -Wno-pointer-sign
+minerd_CFLAGS   = -Wno-pointer-sign -Wno-pointer-to-int-cast
 
 if HAVE_WINDOWS
 minerd_CFLAGS += -Wl,--stack,10485760
