Add simplified monitoring api
use -b <port> for local telnet, -b <ip:port> for network

default port set to 4048 (4028 in cgminer, 4068 in ccminer)

Add sample php api client

Signed-off-by: Tanguy Pruvot <tanguy.pruvot@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,6 +17,7 @@ dist_man_MANS	= minerd.1
 
 minerd_SOURCES = \
   cpu-miner.c util.c \
+  api.c sensors.c \
   sha3/sph_keccak.c \
   sha3/sph_hefty1.c \
   sha3/sph_groestl.c \
